<resources>
    <string name="app_name">Αναζήτηση Πτήσεων</string>
    <string name="title_activity_search_result">Αποτελέσματα Αναζήτησης</string>
    <string name="title_detail_activity">Λεπτομέριες</string>

    <!-- fragment_main.xml -->
    <string name="fr_main_searchTitle">Επιλογές Αναζήτησης</string>
    <string name="fr_main_spinnerFrom">Πτήση Απο</string>
    <string name="fr_main_spinnerTo">Πτήση Προς</string>
    <string name="fr_main_buttonSearch">Αναζήτηση</string>
    <string name="fr_main_departure_spinner">Ημερομηνία Αναχώρισης</string>
    <string name="fr_main_arrive_spinner">Ημερομηνία Επιστροφής</string>
    <string name="fr_main_nonstop">Απευθείας</string>
    <string name="fr_main_max_cost">Μέγιστο Κόστος</string>
    <string name="fr_main_buttonMoreOpts">More Options</string>
    <string name="fr_main_origin_country">Χώρα Προέλευσης</string>
    <string name="fr_main_destination_country">Χώρα Προορισμού</string>
    <string name="action_updateDB">Ενημέρωση Βάσης</string>
    <string name="action_settings">Ρυθμίσεις</string>

    <!-- fragment_detail_activity.xml -->
    <string name="fr_detail_cost">Κόστος: </string>
    <string name="fr_detail_outbound">Πτήσεις</string>
    <string name="fr_detail_inbound">Επιστροφές</string>

    <!-- detail_item.xml -->
    <string name="detail_item_departsAt">Αναχώριση</string>
    <string name="detail_item_arrivesAt">Άφιξη</string>
    <string name="detail_item_origin">Προέλευση</string>
    <string name="detail_item_destination">Προορισμός</string>
    <string name="detail_item_airline">Αεροπορική Γραμμή</string>
    <string name="detail_item_class">Κλάση</string>
    <string name="detail_item_seats">Διαθέσιμες Θέσεις</string>

    <!-- ProgressDialog string -->
    <string name="dialog_wait_msg">Παρακαλώ περιμένετε...</string>
    <string name="dialog_title">Κατέβασμα Δεδομένων</string>
    <string name="dialog_data_fetch">Κατέβασμα Δεδομένων</string>
    <string name="dialog_flights_fetch">Εύρεση Πτήσεων</string>

    <!-- Preferences strings -->
    <string name="pref_max_results_label">Μέγιστος Αριθμός Αποτελεσμάτων</string>
    <string name="pref_max_results_key" translatable="false">number_of_results</string>
    <string name="pref_max_results_default" translatable="false">-1</string>

    <string name="pref_currency_label">Νόμισμα</string>
    <string name="pref_currency_key" translatable="false">currency</string>
    <string name="pref_currency_default" translatable="false">EUR</string>

    <string-array name="pref_currency_entries">
        <item>Δολάριο (Αμερικής)</item>
        <item>Ευρώ</item>
        <item>Δολάριο (Καναδά)</item>
        <item>Βρετανική Λίρα (Στερλίνα)</item>
        <item>Γεν Ιαπωνίας</item>
        <item>Ρούβλι Ρωσίας</item>
    </string-array>

    <string-array name="pref_currency_entryValues">
        <item>USD</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>RUB</item>
    </string-array>
</resources>
