<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_flight_search"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.giorgosmih.flightitineraries.FlightSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fr_main_searchTitle"
            android:textAlignment="center"
            android:textColor="@color/fr_main_searchTitleColor"
            android:textSize="@dimen/fr_main_searchTitleDim" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/customborder"
                android:orientation="vertical"
                android:weightSum="2">

                <AutoCompleteTextView
                    android:dropDownHeight="150dp"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:id="@+id/spinnerCitiesFrom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:completionThreshold="1"
                    android:hint="@string/fr_main_spinnerFrom" />

                <AutoCompleteTextView
                    android:dropDownHeight="150dp"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:completionThreshold="1"
                    android:id="@+id/spinnerCitiesTo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/fr_main_spinnerTo" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Φιλτράρισμα ως προς την Χώρα"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/customborder"
                android:orientation="vertical"
                android:weightSum="2">

                <AutoCompleteTextView
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:dropDownHeight="150dp"
                    android:completionThreshold="1"
                    android:id="@+id/spinnerFlightFrom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/fr_main_origin_country" />

                <AutoCompleteTextView
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionDone"
                    android:dropDownHeight="150dp"
                    android:completionThreshold="1"
                    android:id="@+id/spinnerFlightTo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/fr_main_destination_country" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:text="Επιλογή Επιβατών"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPersons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ενήλικες"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextChildren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="Παιδιά"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextInfants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Νεογέννητα"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textAlignment="center" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextDepartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/fr_main_departure_spinner"
            android:inputType="date"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextArriveDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/fr_main_arrive_spinner"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/checkboxNonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fr_main_nonstop" />

        <EditText
            android:id="@+id/editTextMaxCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/fr_main_max_cost"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fr_main_buttonSearch"
            android:textAllCaps="false"
            android:textSize="@dimen/fr_main_buttonSearchDim" />
    </LinearLayout>
</ScrollView>